--- a/worldwildlife.html
+++ b/worldwildlife.html
@@ -152,44 +152,47 @@
                             </li>
                         </ul>
 
-                       <div class="mobile-sub-container">
-                           <form id="search-form" class="form-inline">
-                               <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                               <button type="submit">
-                                   <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="search"
-                                        class="svg-inline--fa fa-search fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
-                                        viewBox="0 0 512 512">
-                                       <path fill="currentColor"
-                                             d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path>
-                                   </svg>
-                               </button>
-                           </form>
+                        <div class="mobile-sub-container">
+                            <form id="search-form" class="form-inline">
+                                <input class="form-control mr-sm-2" type="search" placeholder="Search"
+                                       aria-label="Search">
+                                <button type="submit">
+                                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="search"
+                                         class="svg-inline--fa fa-search fa-w-16" role="img"
+                                         xmlns="http://www.w3.org/2000/svg"
+                                         viewBox="0 0 512 512">
+                                        <path fill="currentColor"
+                                              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path>
+                                    </svg>
+                                </button>
+                            </form>
 
-                           <ul class="navbar-nav" id="nav-button">
-                               <li class="nav-item nav-button-left">
-                                   <a class="nav-link" href="#">Donate</a>
+                            <ul class="navbar-nav" id="nav-button">
+                                <li class="nav-item nav-button-left">
+                                    <a class="nav-link" href="#">Donate</a>
 
-                                   <div class="dark-sub-menu">
-                                       <a class="nav-item nav-link" href="#"><span>Make a One-time Donation</span></a>
-                                       <a class="nav-item nav-link" href="#"><span>Make a Monthly Donation</span></a>
-                                       <a class="nav-item nav-link" href="#"><span>Become a Paperless Member</span></a>
-                                       <a class="nav-item nav-link" href="#"><span>Renew Your Membership</span></a>
-                                       <a class="nav-item nav-link" href="#"><span>Join as a Partner in Conservation</span></a>
-                                   </div>
+                                    <div class="dark-sub-menu">
+                                        <a class="nav-item nav-link" href="#"><span>Make a One-time Donation</span></a>
+                                        <a class="nav-item nav-link" href="#"><span>Make a Monthly Donation</span></a>
+                                        <a class="nav-item nav-link" href="#"><span>Become a Paperless Member</span></a>
+                                        <a class="nav-item nav-link" href="#"><span>Renew Your Membership</span></a>
+                                        <a class="nav-item nav-link"
+                                           href="#"><span>Join as a Partner in Conservation</span></a>
+                                    </div>
 
-                               </li>
-                               <li class="nav-item nav-button-right">
-                                   <a class="nav-link" href="#">Adopt</a>
+                                </li>
+                                <li class="nav-item nav-button-right">
+                                    <a class="nav-link" href="#">Adopt</a>
 
-                                   <div class="dark-sub-menu">
-                                       <a class="nav-item nav-link" href="#"><span>Adoptions</span></a>
-                                       <a class="nav-item nav-link" href="#"><span>T-Shirts </span></a>
-                                       <a class="nav-item nav-link" href="#"><span>Socks</span></a>
-                                       <a class="nav-item nav-link" href="#"><span>More Gifts</span></a>
-                                   </div>
-                               </li>
-                           </ul>
-                       </div>
+                                    <div class="dark-sub-menu">
+                                        <a class="nav-item nav-link" href="#"><span>Adoptions</span></a>
+                                        <a class="nav-item nav-link" href="#"><span>T-Shirts </span></a>
+                                        <a class="nav-item nav-link" href="#"><span>Socks</span></a>
+                                        <a class="nav-item nav-link" href="#"><span>More Gifts</span></a>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
 
                     </div>
 
@@ -209,7 +212,8 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon">
-                         <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars" class="svg-inline--fa fa-bars fa-w-14"
+                         <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars"
+                              class="svg-inline--fa fa-bars fa-w-14"
                               role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                         <path fill="currentColor"
                               d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"></path>
@@ -278,17 +282,19 @@
 
     </div>
 
-        <!--<div id="mobile-nav-button">
-            <ul class="navbar-nav" id="down-nav-button">
-                <li class="nav-item nav-button-left">
-                    <a class="nav-link" href="#"><span>Donate</span></a>
-                </li>
-                <li class="nav-item nav-button-right">
-                    <a class="nav-link" href="#"><span>Adopt</span></a>
-                </li>
-            </ul>
-        </div>-->
-123456789
+    <!--   <div id="mobile-nav-button">
+           <ul class="navbar-nav" id="down-nav-button">
+               <li class="nav-item nav-button-left">
+                   <a class="nav-link" href="#"><span>Donate</span></a>
+               </li>
+               <li class="nav-item nav-button-right">
+                   <a class="nav-link" href="#"><span>Adopt</span></a>
+               </li>
+           </ul>
+       </div>-->
+
+    <h1 class="hidden">gkijijgk</h1>
+
 </header>
 <main id="main">
     <div class="container bg-secondary">
@@ -296,8 +302,64 @@
     </div>
 </main>
 <footer id="footer">
-    <div class="container-fluid bg-primary">
-        footer
+    <div class="dark-footer">
+    <div class="container">
+            <div class="email-footer">
+                <p>Get the latest conservation news with WWF email.</p>
+                <div class="btn-simple"><a href="#">Sing up</a></div>
+            </div>
+            <div class="login-footer">
+                <p>Already have a WWF account?
+                </p>
+                <div class="btn-simple"><a href="#">Log in</a></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="bottom-footer">
+            <span class="logo">
+                <img src="sass-boilerplate/stylesheets/images/logo/logo-mobile.png" alt="logo">
+            </span>
+<nav>
+    <ul class="nav">
+        <li class="nav-item"><a class="nav-link" href="#">Careers</a></li>
+
+        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+
+        <li class="nav-item"><a class="nav-link" href="#">News & Press</a></li>
+
+        <li class="nav-item"><a class="nav-link" href="#">Privacy Policy / Your Privacy Rights</a></li>
+
+        <li class="nav-item"><a class="nav-link" href="#">Site Terms</a></li>
+
+        <li class="nav-item"><a class="nav-link" href="#">State Disclosures</a></li>
+
+        <li class="nav-item"><a class="nav-link" href="#">Help</a></li>
+
+        <li class="nav-item"><a class="nav-link" href="#">Login</a></li>
+    </ul>
+</nav>
+
+            <p>
+                <address>
+            <strong>World Wildlife Fund</strong>
+            <br>
+            1250 24th Street, N.W.<br>
+            Washington, DC 20037
+        </address>
+            </p>
+            <div class="icons-footer">
+                <a href="#" class="ico-facebook">facebook</a>
+                <a href="#" class="ico-twitter">twitter</a>
+                <a href="#" class="ico-instagram">instagram</a>
+                <a href="#" class="ico-youtube">youtube</a>
+                <a href="#" class="ico-rss">rss</a>
+            </div>
+<div class="copyright">
+    &copy; 2020 World Wildlife Fund
+</div>
+        </div>
     </div>
 </footer>
 
