--- a/worldwildlifearctic.html
+++ b/worldwildlifearctic.html
@@ -11,7 +11,7 @@
     <title>worldwildlifearctic</title>
 </head>
 <body>
-<header id="header" class="header-worldwildlife">
+<header id="header" class="header-worldwildlifearctic">
     <div id="navbar-container">
         <div class="container">
             <nav id="desktop-navbar" class="navbar navbar-expand-md">
@@ -21,7 +21,7 @@
                     <div class="navbar-container">
 
                         <ul class="navbar-nav nav-push-left">
-                            <li class="nav-item">
+                            <li class="nav-item nav-arctic">
                                 <a class="nav-link" href="#">Our Work</a>
 
                                 <div class="sub-menu">
@@ -52,7 +52,7 @@
                                 </div>
 
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item nav-arctic">
                                 <a class="nav-link" href="#">Species</a>
 
                                 <div class="sub-menu">
@@ -84,7 +84,7 @@
                                 </div>
 
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item nav-arctic">
                                 <a class="nav-link" href="#">Places</a>
 
                                 <div class="sub-menu">
@@ -121,7 +121,7 @@
                         </ul>
 
                         <ul class="navbar-nav nav-push-right">
-                            <li class="nav-item">
+                            <li class="nav-item nav-arctic">
                                 <a class="nav-link" href="#">About Us</a>
 
                                 <div class="dark-sub-menu">
@@ -136,7 +136,7 @@
                                 </div>
 
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item nav-arctic">
                                 <a class="nav-link" href="#">How to Help</a>
 
                                 <div class="dark-sub-menu">
@@ -255,7 +255,7 @@
 
 
                 <div class="mobile-nav-button">
-                    <ul class="navbar-nav" id="down-nav-button">
+                    <ul class="navbar-nav down-nav-button">
                         <li class="nav-item nav-button-left">
                             <a class="nav-link" href="#"><span>Donate</span></a>
                         </li>
@@ -285,7 +285,7 @@
     </div>
 
     <div class="mobile-nav-button hidden-nav-button">
-        <ul class="navbar-nav" id="down-nav-button">
+        <ul class="navbar-nav down-nav-button">
             <li class="nav-item nav-button-left">
                 <a class="nav-link" href="#"><span>Donate</span></a>
             </li>
@@ -297,12 +297,47 @@
 
     <div class=" header-content">
         <div class="hdr">
-            <h2>Arctic</h2>
+            <h1>
+                Protecting wildlife for a <br> healthy planet</h1>
+        </div>
+        <div class="hdr-sub">
+            <p>WWF works in unity with many to achieve lasting conservation results. Together, we can protect
+                <br> and
+                restore species and their habitats.</p>
         </div>
     </div>
 
 </header>
 <main id="main">
+    <section class="help-project-section">
+        <div class="container">
+            <div class="down-header-content">
+                <div class="hdr">
+                    <h1>
+                        Protecting wildlife for a <br> healthy planet</h1>
+                </div>
+                <div class="hdr-sub">
+                    <p>WWF works in unity with many to achieve lasting conservation results. Together, we can protect and
+                        restore species and their habitats.</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-8 help-project">
+                    <a href="#">
+                        <h2>Adopt an Animal</h2>
+                    </a>
+                    <a href="#">
+                        <p>Give a gift that will help protect the future of nature. Make a symbolic adoption in support
+                            of
+                            WWF's global efforts.</p>
+                    </a>
+                </div>
+
+            </div>
+
+        </div>
+    </section>
     <div class="container bg-secondary">
         main
     </div>
