--- a/worldwildlifespecies.html
+++ b/worldwildlifespecies.html
@@ -21,7 +21,7 @@
                     <div class="navbar-container">
 
                         <ul class="navbar-nav nav-push-left">
-                            <li class="nav-item">
+                            <li class="nav-item nav-arctic">
                                 <a class="nav-link" href="#">Our Work</a>
 
                                 <div class="sub-menu">
@@ -52,7 +52,7 @@
                                 </div>
 
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item nav-arctic">
                                 <a class="nav-link" href="#">Species</a>
 
                                 <div class="sub-menu">
@@ -84,7 +84,7 @@
                                 </div>
 
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item nav-arctic">
                                 <a class="nav-link" href="#">Places</a>
 
                                 <div class="sub-menu">
@@ -121,7 +121,7 @@
                         </ul>
 
                         <ul class="navbar-nav nav-push-right">
-                            <li class="nav-item">
+                            <li class="nav-item nav-arctic">
                                 <a class="nav-link" href="#">About Us</a>
 
                                 <div class="dark-sub-menu">
@@ -136,7 +136,7 @@
                                 </div>
 
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item nav-arctic">
                                 <a class="nav-link" href="#">How to Help</a>
 
                                 <div class="dark-sub-menu">
@@ -255,7 +255,7 @@
 
 
                 <div class="mobile-nav-button">
-                    <ul class="navbar-nav" id="down-nav-button">
+                    <ul class="navbar-nav down-nav-button">
                         <li class="nav-item nav-button-left">
                             <a class="nav-link" href="#"><span>Donate</span></a>
                         </li>
@@ -285,7 +285,7 @@
     </div>
 
     <div class="mobile-nav-button hidden-nav-button">
-        <ul class="navbar-nav" id="down-nav-button">
+        <ul class="navbar-nav down-nav-button">
             <li class="nav-item nav-button-left">
                 <a class="nav-link" href="#"><span>Donate</span></a>
             </li>
@@ -297,15 +297,310 @@
 
     <div class=" header-content">
         <div class="hdr">
-            <h2>Australia's Devastating Bushfires</h2>
+            <h1>
+                Protecting wildlife for a <br> healthy planet</h1>
         </div>
         <div class="hdr-sub">
-            <h3>Learn more about the crisis and what WWF is doing to help</h3>
+            <p>WWF works in unity with many to achieve lasting conservation results. Together, we can protect
+                <br> and
+                restore species and their habitats.</p>
         </div>
     </div>
 
 </header>
 <main id="main">
+    <section class="help-project-section">
+        <div class="container">
+            <div class="down-header-content">
+                <div class="hdr">
+                    <h1>
+                        Protecting wildlife for a <br> healthy planet</h1>
+                </div>
+                <div class="hdr-sub">
+                    <p>WWF works in unity with many to achieve lasting conservation results. Together, we can protect
+                        and
+                        restore species and their habitats.</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-8 help-project">
+                    <a href="#">
+                        <h2>Adopt an Animal</h2>
+                    </a>
+                    <a href="#">
+                        <p>Give a gift that will help protect the future of nature. Make a symbolic adoption in support
+                            of
+                            WWF's global efforts.</p>
+                    </a>
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+
+    <section class="grid-card-species-section">
+        <div class="container">
+            <div class="row text-content">
+                <div class="col-md-9">
+                    <p>We protect wildlife because they inspire us. But we also focus our efforts on those species—like
+                        tigers, rhinos, whales and marine turtles—whose protection influences and supports the survival
+                        of other species
+                        or offers the opportunity to protect whole landscapes or marine areas.</p>
+                </div>
+            </div>
+
+            <div class="row">
+
+                <div class="grid-card-species">
+
+                    <a href="#">
+                        <div class="grid-card-item grid-card-1">
+                            <div class="grid-card-content">
+                                <p>Tiger</p>
+                                <div class="arrow"> ></div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="grid-card-item grid-card-2">
+                            <div
+                                    class="grid-card-content">
+                                <p>Polar bear</p>
+                                <div class="arrow"> ></div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="grid-card-item grid-card-3">
+                            <div
+                                    class="grid-card-content">
+                                <p>Giant panda</p>
+                                <div class="arrow"> ></div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="grid-card-item grid-card-4">
+                            <div
+                                    class="grid-card-content">
+                                <p>Amur leopard</p>
+                                <div class="arrow"> ></div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="grid-card-item grid-card-5">
+                            <div
+                                    class="grid-card-content">
+                                <p>Orangutan</p>
+                                <div class="arrow"> ></div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="grid-card-item grid-card-6">
+                            <div
+                                    class="grid-card-content">
+                                <p>Sea turtle</p>
+                                <div class="arrow"> ></div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="grid-card-item grid-card-7">
+                            <div
+                                    class="grid-card-content">
+                                <p>Chimpansee</p>
+                                <div class="arrow"> ></div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="grid-card-item grid-card-8">
+                            <div
+                                    class="grid-card-content">
+                                <p>Elephant</p>
+                                <div class="arrow"> ></div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="grid-card-item grid-card-9">
+                            <div
+                                    class="grid-card-content">
+                                <p>Plains bison</p>
+                                <div class="arrow"> ></div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="grid-card-item grid-card-10">
+                            <div
+                                    class="grid-card-content">
+                                <p>Vaquita</p>
+                                <div class="arrow"> ></div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="grid-card-item grid-card-11">
+                            <div
+                                    class="grid-card-content">
+                                <p>Rhino</p>
+                                <div class="arrow"> ></div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="grid-card-item grid-card-12">
+                            <div
+                                    class="grid-card-content">
+                                <p>Dolphins and Porpoises</p>
+                                <div class="arrow"> ></div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="grid-card-item grid-card-13">
+                            <div
+                                    class="grid-card-content">
+                                <p>Gorilla</p>
+                                <div class="arrow"> ></div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="grid-card-item grid-card-14">
+                            <div
+                                    class="grid-card-content">
+                                <p>Whale</p>
+                                <div class="arrow"> ></div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="grid-card-item grid-card-15">
+                            <div
+                                    class="grid-card-content">
+                                <p>Bonobo</p>
+                                <div class="arrow"> ></div>
+                            </div>
+                        </div>
+                    </a>
+
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="circle-card-section">
+        <div class="container">
+            <div class="circle-card-marineanimals">
+                <span class="card-title">Marine animals</span>
+
+                <div class="circle-card-pillars">
+                    <button class="arrow prev"> <span><</span> </button>
+                    <div class="circle-card-item"><a href="#">
+                        <div class="card-item-1">
+                        </div>
+                        <p>Sea Turtle</p></a></div>
+                    <div class="circle-card-item"><a href="#">
+                        <div class="card-item-2">
+                        </div>
+                        <p>Humphead Wrasse</p></a></div>
+                    <div class="circle-card-item"><a href="#">
+                        <div class="card-item-3">
+                        </div>
+                        <p>Pacific Salmon</p></a></div>
+                    <div class="circle-card-item"><a href="#">
+                        <div class="card-item-4">
+                        </div>
+                        <p>Dolphins and Porpoises</p></a></div>
+                    <div class="circle-card-item"><a href="#">
+                        <div class="card-item-5">
+                        </div>
+                        <p>Whale</p>
+                    </a></div>
+                    <div class="circle-card-item"><a href="#">
+                        <div class="card-item-6">
+                        </div>
+                        <p>Seals</p>
+                    </a></div>
+                    <div class="circle-card-item"><a href="#">
+                        <div class="card-item-7">
+                        </div>
+                        <p>Sea Lions</p>
+                    </a></div>
+                    <div class="circle-card-item"><a href="#">
+                        <div class="card-item-8">
+                        </div>
+                        <p>Marine Iguana</p>
+                    </a></div>
+                    <div class="circle-card-item"><a href="#">
+                        <div class="card-item-9">
+                        </div>
+                        <p>Tuna</p>
+                    </a></div>
+                    <div class="circle-card-item"><a href="#">
+                        <div class="card-item-10">
+                        </div>
+                        <p>Galápagos Penguin</p>
+                    </a></div>
+                    <div class="circle-card-item"><a href="#">
+                        <div class="card-item-11">
+                        </div>
+                        <p>Shark</p>
+                    </a></div>
+                    <div class="circle-card-item"><a href="#">
+                        <div class="card-item-12">
+                        </div>
+                        <p>Polar Bear</p>
+                    </a></div>
+                    <div class="circle-card-item"><a href="#">
+                        <div class="card-item-13">
+                        </div>
+                        <p>View All</p>
+                    </a></div>
+
+                    <button class="arrow next"><span> > </span></button>
+
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <section class="circle-card-section">
+        <div class="container">
+            <div class="circle-card-primates">
+                <span class="card-title">Primatesdfr</span>
+
+                <div class="circle-card-pillars">
+                    <button class="arrow prev"> <span><</span> </button>
+                    .circle-card-item*6>a>div.card-item-1+p
+                    <button class="arrow next"><span> > </span></button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="circle-card-section">
+        <div class="container">
+            <div class="circle-card-bigcats">
+                <span class="card-title">Big cats</span>
+
+                <div class="circle-card-pillars">
+                    <button class="arrow prev"> <span><</span> </button>
+                    .circle-card-item*5>a>div.card-item-1+p
+                    <button class="arrow next"><span> > </span></button>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <div class="container bg-secondary">
         main
     </div>
@@ -412,5 +707,6 @@
 <script src="sass-boilerplate/stylesheets/layout/header.js"></script>
 <script src="sass-boilerplate/stylesheets/vendors/node_modules/jquery/dist/jquery.min.js"></script>
 <script src="sass-boilerplate/stylesheets/vendors/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="sass-boilerplate/stylesheets/pages/worldwildlifespecies.js"></script>
 </body>
 </html>
