--- a/worldwildlifespecies.html
+++ b/worldwildlifespecies.html
@@ -502,7 +502,7 @@
                 <span class="card-title">Marine animals</span>
 
                 <div class="circle-card-pillars">
-                    <button class="arrow prev"> <span><</span> </button>
+                    <button class="arrow prev"><span><</span></button>
                     <div class="circle-card-item"><a href="#">
                         <div class="card-item-1">
                         </div>
@@ -576,11 +576,34 @@
     <section class="circle-card-section">
         <div class="container">
             <div class="circle-card-primates">
-                <span class="card-title">Primatesdfr</span>
+                <span class="card-title">Primates</span>
 
                 <div class="circle-card-pillars">
-                    <button class="arrow prev"> <span><</span> </button>
-                    .circle-card-item*6>a>div.card-item-1+p
+                    <button class="arrow prev"><span><</span></button>
+                    <div class="circle-card-item"><a href="#">
+                        <div class="card-item-1"></div>
+                        <p>Chimpanzee</p>
+                    </a></div>
+                    <div class="circle-card-item"><a href="#">
+                        <div class="card-item-2"></div>
+                        <p>Orangutan</p>
+                    </a></div>
+                    <div class="circle-card-item"><a href="#">
+                        <div class="card-item-3"></div>
+                        <p>Black Spider Monkey</p>
+                    </a></div>
+                    <div class="circle-card-item"><a href="#">
+                        <div class="card-item-4"></div>
+                        <p>Bonobo</p>
+                    </a></div>
+                    <div class="circle-card-item"><a href="#">
+                        <div class="card-item-5"></div>
+                        <p>Gorilla</p>
+                    </a></div>
+                    <div class="circle-card-item"><a href="#">
+                        <div class="card-item-6"></div>
+                        <p>View All</p>
+                    </a></div>
                     <button class="arrow next"><span> > </span></button>
                 </div>
             </div>
@@ -593,9 +616,75 @@
                 <span class="card-title">Big cats</span>
 
                 <div class="circle-card-pillars">
-                    <button class="arrow prev"> <span><</span> </button>
-                    .circle-card-item*5>a>div.card-item-1+p
+                    <button class="arrow prev"><span><</span></button>
+                    <div class="circle-card-item"><a href="">
+                        <div class="card-item-1"></div>
+                        <p>Jaguar</p>
+                    </a></div>
+                    <div class="circle-card-item"><a href="">
+                        <div class="card-item-2"></div>
+                        <p>Snow Leopard</p>
+                    </a></div>
+                    <div class="circle-card-item"><a href="">
+                        <div class="card-item-3"></div>
+                        <p>Tiger</p>
+                    </a></div>
+                    <div class="circle-card-item"><a href="">
+                        <div class="card-item-4"></div>
+                        <p>Amur Leopard</p>
+                    </a></div>
+                    <div class="circle-card-item"><a href="">
+                        <div class="card-item-5"></div>
+                        <p>View All</p>
+                    </a></div>
                     <button class="arrow next"><span> > </span></button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="grid-species-section">
+        <div class="container">
+            <div class="row">
+                <div class="grid-species">
+                    <div class="grid-card-item">
+                        <div class="grid-card-1"><img
+                                src="sass-boilerplate/stylesheets/images/gridspecies/species-index-search-5c41c9d5eea739f89623c43a0b078b63112e530b52ccc3a2a41f5009348ba982.png"
+                                alt="tiger">
+
+                            <form id="grid-species-form" class="form-inline">
+                                <label for="search-by-name">Search By Name
+                                    <input id="search-by-name" class="form-control mr-sm-2" type="search" placeholder="Tiger, Panda, Polar Bear" aria-label="Search">
+                                    <button type="submit">
+                                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="search"
+                                             class="svg-inline--fa fa-search fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
+                                             viewBox="0 0 512 512">
+                                            <path fill="currentColor"
+                                                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path>
+                                        </svg>
+                                    </button>
+                                </label>
+                            </form>
+
+                        </div>
+                    </div>
+                    <div class="grid-card-item"><a href="#">
+                        <div class="grid-card-2"><img
+                                src="sass-boilerplate/stylesheets/images/gridspecies/species-index-ad-browse-531c40ee4013c245f381f363d3ce7ddc2f771e620f73658a15f031026e022ab8.jpg"
+                                alt="panda">
+                            <p class="btn-species">Browse All WWF Species <span> > </span> </p>
+                        </div>
+                    </a></div>
+                    <div class="grid-card-item"><a href="#">
+                        <div class="grid-card-3">
+                            <p class="promo-text">Introducing WWF's Wild Classroom: tools and activities for educators and parents</p>
+                            <img
+                                src="sass-boilerplate/stylesheets/images/gridspecies/sea_turtle_toolkit_poster.jpg"
+                                alt="turtle">
+                            <p class="btn-species">teaching resources <span> > </span> </p>
+                        </div>
+
+                    </a></div>
                 </div>
             </div>
         </div>
